compiler/testData/diagnostics/tests/override/ExtendFunctionClass.kt
package extendFunctionClass

class <!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>A<!> : Function1<Int, Int> {

}

class B : Function1<Int, Int> {
    override fun invoke(p1 : Int) = p1
}
